--- a/templates/settings.html
+++ b/templates/settings.html
@@ -8,6 +8,7 @@
     <nav class="buttons tab-buttons mb-4" id="settingsTabs">
       <button type="button" class="mdc-button mdc-button--raised is-active" data-target="generalSettings">General</button>
       <button type="button" class="mdc-button mdc-button--raised" data-target="exportSettings">Export</button>
+      <button type="button" class="mdc-button mdc-button--raised" data-target="reportSettings">Reports</button>
       <button type="button" class="mdc-button mdc-button--raised" data-target="duplicateSettings">Duplicates</button>
       <button type="button" class="mdc-button mdc-button--raised" data-target="skuSettings">SKUs</button>
     </nav>
@@ -155,6 +156,24 @@
             <input type="checkbox" class="switch" name="include_shopify" {% if include_shopify %}checked{% endif %}>
             <span>Shopify income tables</span>
           </label>
+        </div>
+      </div>
+    </div>
+    <div id="reportSettings" class="tab-pane is-hidden">
+      <div class="box mb-4">
+        <h3 class="title is-5 mb-3">Display</h3>
+        <div class="field mb-4 is-flex is-align-items-center">
+          <label class="label mr-2">Start tab</label>
+          <div class="select">
+            <select name="reports_start_tab">
+              <option value="by-month" {% if reports_start_tab != 'by-year' %}selected{% endif %}>By month</option>
+              <option value="by-year" {% if reports_start_tab == 'by-year' %}selected{% endif %}>By year</option>
+            </select>
+          </div>
+        </div>
+        <div class="field mb-4 is-flex is-align-items-center">
+          <label class="label mr-2">Years to show</label>
+          <input class="input" type="number" name="reports_year_limit" min="1" value="{{ reports_year_limit }}">
         </div>
       </div>
     </div>
