--- a/static/styles.css
+++ b/static/styles.css
@@ -661,6 +661,14 @@ input.switch:checked::before {
   font-weight: bold;
 }
 
+/* trend arrows rendered consistently */
+.trend-icon {
+  display: inline-block;
+  width: 1.25rem;
+  text-align: center;
+  font-weight: bold;
+}
+
 /* responsive charts */
 #lastMonthChart,
 #yearChart {
