--- a/static/styles.css
+++ b/static/styles.css
@@ -461,6 +461,7 @@ input.switch:checked::before {
 .parent-select {
   max-width: 100%;
   min-width: 0;
+  width: 100%;
 }
 
 
@@ -659,6 +660,13 @@ input.switch:checked::before {
   width: 1.25rem;
   text-align: center;
   font-weight: bold;
+}
+
+/* ensure trend arrows have consistent size */
+.trend-arrow {
+  display: inline-block;
+  width: 1.25rem;
+  text-align: center;
 }
 
 /* responsive charts */
