--- a/templates/report.html
+++ b/templates/report.html
@@ -63,7 +63,7 @@
           <tr{% if r.type == 'Total' %} class="has-background-light has-text-weight-bold"{% endif %}>
             <td>{{ r.type }}</td>
             <td>${{ "%.2f"|format(r.total) }}</td>
-            <td>{{ r.vs_last | trend }}</td>
+            <td>{{ r.vs_last | trend(r.vs_last_sign) }}</td>
             <td>{{ ("$%.2f"|format(r.avg_month)) | trend(r.avg_month_sign) }}</td>
             <td>{{ ("$%.2f"|format(r.best_month)) | trend(r.best_month_sign) }}</td>
           </tr>
@@ -126,12 +126,12 @@
           <tr><th>Month</th><th>{{ selected_year }} $</th><th>{{ selected_year - 1 }} $</th><th>% Change</th></tr>
         </thead>
         <tbody>
-          {% for month, current, previous, pct in rows %}
+          {% for month, current, previous, pct, sign in rows %}
           <tr>
             <td>{{ month }}</td>
             <td>${{ "%.2f"|format(current or 0) }}</td>
             <td>${{ "%.2f"|format(previous or 0) }}</td>
-            <td>{{ pct | trend }}</td>
+            <td>{{ pct | trend(sign) }}</td>
           </tr>
           {% endfor %}
         </tbody>
@@ -145,12 +145,12 @@
           <tr><th>Quarter</th><th>{{ selected_year }} $</th><th>{{ selected_year - 1 }} $</th><th>% Change</th></tr>
         </thead>
         <tbody>
-          {% for q, current, previous, pct in quarter_rows %}
+          {% for q, current, previous, pct, sign in quarter_rows %}
           <tr>
             <td>{{ q }}</td>
             <td>${{ "%.2f"|format(current or 0) }}</td>
             <td>${{ "%.2f"|format(previous or 0) }}</td>
-            <td>{{ pct | trend }}</td>
+            <td>{{ pct | trend(sign) }}</td>
           </tr>
           {% endfor %}
         </tbody>
@@ -176,7 +176,7 @@
           <tr>
             <td>{{ r.type }}</td>
             <td>${{ "%.2f"|format(r.total) }}</td>
-            <td>{{ r.vs_last | trend }}</td>
+            <td>{{ r.vs_last | trend(r.vs_last_sign) }}</td>
             <td>{{ ("$%.2f"|format(r.avg_month)) | trend }}</td>
             <td>{{ ("$%.2f"|format(r.best_month)) | trend }}</td>
             <td>{{ ("%.2f"|format(r.avg_qty)) | trend }}</td>
