--- a/templates/report.html
+++ b/templates/report.html
@@ -203,7 +203,7 @@
             <td>{{ row['month'] }}</td>
             <td>${{ "%.2f"|format(row['avg']) }}</td>
             {% for val in row['values'] %}
-            <td>{{ ("$%.2f"|format(val.val)) | trend(val.diff) }}</td>
+            <td>{% if val.val is none %}-{% else %}{{ ("$%.2f"|format(val.val)) | trend(val.diff) }}{% endif %}</td>
             {% endfor %}
           </tr>
           {% endfor %}
@@ -211,7 +211,7 @@
             <td>Total</td>
             <td>${{ "%.2f"|format(shopify_avg_total) }}</td>
             {% for t in shopify_totals %}
-            <td>{{ ("$%.2f"|format(t.val)) | trend(t.diff) }}</td>
+            <td>{% if t.diff is none %}{{ "$%.2f"|format(t.val) }}{% else %}{{ ("$%.2f"|format(t.val)) | trend(t.diff) }}{% endif %}</td>
             {% endfor %}
           </tr>
         </tbody>
@@ -234,7 +234,7 @@
             <td>{{ row['quarter'] }}</td>
             <td>${{ "%.2f"|format(row['avg']) }}</td>
             {% for val in row['values'] %}
-            <td>{{ ("$%.2f"|format(val.val)) | trend(val.diff) }}</td>
+            <td>{% if val.val is none %}-{% else %}{{ ("$%.2f"|format(val.val)) | trend(val.diff) }}{% endif %}</td>
             {% endfor %}
           </tr>
           {% endfor %}
