--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="{{ url_for('favicon') }}">
   <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   {% if theme %}
   <style>
   :root {
@@ -52,6 +53,7 @@
   </div>
 </section>
 <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script>
 document.addEventListener('DOMContentLoaded', () => {
   mdc.autoInit();
